--- a/Sepehr.Core/Core.Mvc/Core.Mvc.csproj
+++ b/Sepehr.Core/Core.Mvc/Core.Mvc.csproj
@@ -18,7 +18,7 @@
     <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE;DEBUG; </DefineConstants>
     <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
