--- a/Sepehr.Core/Core.Serialization.Tests/Core.Serialization.Tests.csproj
+++ b/Sepehr.Core/Core.Serialization.Tests/Core.Serialization.Tests.csproj
@@ -45,6 +45,7 @@
       <HintPath>..\..\Release\Core\Sepehr.Core\Kendo.Mvc\bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="WindowsBase">
       <Private>True</Private>
