--- a/Sepehr.Core/Core.Serialization/Core.Serialization.csproj
+++ b/Sepehr.Core/Core.Serialization/Core.Serialization.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;DEBUGOUTPUT</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,12 +34,12 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;DEBUGOUTPUT</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -67,14 +67,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryConverters\HashSetBinaryConverter.cs" />
     <Compile Include="BinaryConverters\ISerializableTypeBinaryConverter.cs" />
+    <Compile Include="BinaryConverters\NullBinaryConverter.cs" />
     <Compile Include="BinaryReaderCore.cs" />
     <Compile Include="BinaryWriterCore.cs" />
     <Compile Include="DeserializationContext.cs" />
     <Compile Include="Extention\TypeExt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProxyObject\CSharpCodeProviderForProxyOjectSerialization.cs" />
-    <Compile Include="ProxyObject\IProxyObject.cs" />
     <Compile Include="BinaryConverters\ArrayBinaryConverter.cs" />
     <Compile Include="BinaryConverters\DictionaryBinaryConverter.cs" />
     <Compile Include="BinaryConverters\EnumBinaryConverter.cs" />
