--- a/Sepehr.Core/Core.Cmn/packages.config
+++ b/Sepehr.Core/Core.Cmn/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="Edge.js" version="7.10.1" targetFramework="net45" />
   <package id="EmbeddedResourceVirtualPathProvider" version="1.2.24" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net45" />
