--- a/Sepehr.Core/Core.Entity/Core.Entity.csproj
+++ b/Sepehr.Core/Core.Entity/Core.Entity.csproj
@@ -116,6 +116,7 @@
     <Compile Include="OrganizationBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
+    <Compile Include="Request.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="RouteMapConfig.cs" />
     <Compile Include="TableInfo.cs" />
