--- a/Sepehr.Core/Core.UnitTesting/Core.UnitTesting.csproj
+++ b/Sepehr.Core/Core.UnitTesting/Core.UnitTesting.csproj
@@ -58,11 +58,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\NugetPackages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Mvc, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\Sepehr360\Sepehr360_Main\packages\Microsoft.AspNet.Mvc.5.2.2\lib\net45\System.Web.Mvc.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\NugetPackages\Microsoft.AspNet.Mvc.5.2.2\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\Sepehr360\Sepehr360_Main\packages\Microsoft.AspNet.Razor.3.2.2\lib\net45\System.Web.Razor.dll</HintPath>
@@ -99,6 +104,7 @@
     <Compile Include="Cmn\EntityInfoTests.cs" />
     <Compile Include="Cmn\StringExtTests.cs" />
     <Compile Include="Cmn\TypeExtTests.cs" />
+    <Compile Include="Cmn\HttpHelperTest.cs" />
     <Compile Include="Cmn\Watch_tests.cs" />
     <Compile Include="Entity\LogUnitTestHelper.cs" />
     <Compile Include="Entity\ExceptionLogUnitTestHelper.cs" />
@@ -108,6 +114,7 @@
     <Compile Include="Entity\ConstantUnitTestHelper.cs" />
     <Compile Include="Entity\EntityUnitTestHelperBase.cs" />
     <Compile Include="Mock\Core.Ef\MockBatchExtensions.cs" />
+    <Compile Include="Mock\Core.Service\MockUserRequest.cs" />
     <Compile Include="Mock\MockIDbContextBaseExtentionsForUnitTest.cs" />
     <Compile Include="Mock\MockDbPropertyValues.cs" />
     <Compile Include="Mock\MockDbEntityEntry.cs" />
@@ -118,6 +125,7 @@
     <Compile Include="Mock\MockDbContextBase.cs" />
     <Compile Include="Mock\MockDbSet.cs" />
     <Compile Include="Mock\MockImmediateSqlNotificationRegister.cs" />
+    <Compile Include="Mvc\AccountApiControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\LogRepositoryTests.cs" />
     <Compile Include="Repository\ExceptionLogRepositoryTests.cs" />
