--- a/Sepehr.Core/Core.Rep/Core.Rep.csproj
+++ b/Sepehr.Core/Core.Rep/Core.Rep.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CacheManagementRepository.cs" />
+    <Compile Include="CheckSqlServiceBrockerRepository.cs" />
     <Compile Include="CompanyChartRepository.cs" />
     <Compile Include="CompanyChartRoleRepository.cs" />
     <Compile Include="CompanyRepository.cs" />
